--- a/.github/actions/elixir-setup/action.yml
+++ b/.github/actions/elixir-setup/action.yml
@@ -52,8 +52,12 @@ outputs:
 runs:
   using: "composite"
   steps:
+
+    - name: Check Runner OS
+      run: echo "Runner OS is: ${{ runner.os }}"
+
     - name: Setup Elixir
-      uses: erlef/setup-beam@v1.15.4
+      uses: erlef/setup-beam@v1
       id: beam
       with:
         elixir-version: ${{ inputs.elixir-version }}
