fix: remove colon from runner check string

--- a/.github/actions/elixir-setup/action.yml
+++ b/.github/actions/elixir-setup/action.yml
@@ -54,7 +54,7 @@ runs:
   steps:
 
     - name: Check Runner OS
-      run: echo "Runner OS is: ${{ runner.os }}"
+      run: echo "Runner OS is ${{ runner.os }}"
 
     - name: Setup Elixir
       uses: erlef/setup-beam@v1
