--- a/.github/workflows/elixir-build-and-test.yml
+++ b/.github/workflows/elixir-build-and-test.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   build:
     name: Elixir Build And Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       MIX_ENV: test
     strategy:
