--- a/.github/workflows/elixir-quality-checks.yml
+++ b/.github/workflows/elixir-quality-checks.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   quality_checks:
     name: Elixir Quality Checks
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       MIX_ENV: dev
       elixir: "1.15.4"
