--- a/.github/actions/elixir-setup/action.yml
+++ b/.github/actions/elixir-setup/action.yml
@@ -53,16 +53,13 @@ runs:
   using: "composite"
   steps:
 
-    - name: Check Runner OS
-      run: echo "Runner OS is ${{ runner.os }}"
-      shell: sh
-
     - name: Setup Elixir
       uses: erlef/setup-beam@v1.15.4
       id: beam
       with:
         elixir-version: ${{ inputs.elixir-version }}
         otp-version: ${{ inputs.otp-version }}
+        version-type: strict
     
     - name: Get Deps Cache
       uses: actions/cache@v4
