--- a/.github/workflows/elixir-build-and-test.yml
+++ b/.github/workflows/elixir-build-and-test.yml
@@ -19,15 +19,9 @@ jobs:
       MIX_ENV: test
     strategy:
       matrix:
-        elixir: ["1.10.4", "1.11.4", "1.12.3", "1.13.4", "1.14.4", "1.15.5"]
-        otp: ["22.3", "23.3.4", "24.3.4", "25.3.2", "26.0.2"]
+        elixir: ["1.11.4", "1.12.3", "1.13.4", "1.14.4", "1.15.5"]
+        otp: ["24.3.4", "25.3.2", "26.0.2"]
         exclude:
-          - elixir: "1.10.4"
-            otp: "26.0.2"
-          - elixir: "1.10.4"
-            otp: "25.3.2"
-          - elixir: "1.10.4"
-            otp: "24.3.4"
           - elixir: "1.11.4"
             otp: "25.3.2"
           - elixir: "1.11.4"
@@ -38,12 +32,6 @@ jobs:
             otp: "26.0.2"
           - elixir: "1.13.4"
             otp: "26.0.2"
-          - elixir: "1.14.4"
-            otp: "22.3"
-          - elixir: "1.15.5"
-            otp: "22.3"
-          - elixir: "1.15.5"
-            otp: "23.3.4"
 
     steps:
       - name: Checkout Repository
